[tool.poetry]
name = "banktargeting"
version = "0.1.0"
description = ""
authors = ["Kusukawa Naoya <kusukawa93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "1.26.0"
pandas = "^2.2.3"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
scikit-learn = "^1.5.2"
optuna = "^4.1.0"
matplotlib = "^3.9.2"
catboost = "^1.2.5"
seaborn = "^0.13.2"
hydra-core = "^1.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
